# Multi-Agentic-Self-Healer

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
demo/: README.md  docker-compose.yml
demo/node-service/: Dockerfile  package.json
demo/node-service/src/: index.js
docker/: sandbox.Dockerfile  service.Dockerfile
docs/: TESTING.md
lab/: Dockerfile
lab/inject/: inject_disk_full.sh  inject_oom.sh  inject_service_failure.sh  run_demo_app.sh
lab/services/: cache-sidecar.service  demo-app.service
scripts/: benchmark_logs.py  demo_stack.sh  fetch_loghub_sample.sh  run_failure_lab.sh
src/self_healer/: __init__.py  config.py  heuristics.py  main.py
src/self_healer/agents/: __init__.py  base.py  diagnostician.py  log_parser.py  recovery_planner.py  safety_gate.py
src/self_healer/executor/: __init__.py  docker_sandbox.py
src/self_healer/models/: __init__.py  schemas.py
src/self_healer/orchestrator/: __init__.py  pipeline.py
src/self_healer/safety/: __init__.py  allowlist.py  prompts.py
tests/: test_demo_fixture.py  test_safety.py
